@@ -23,6 +23,8 @@ import org.elasticsearch.cluster.ClusterStateApplier;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.Strings;
+import org.elasticsearch.common.logging.DeprecationCategory;
+import org.elasticsearch.common.logging.DeprecationLogger;
 import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Setting.Property;
@@ -34,6 +36,7 @@ import java.io.Closeable;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
@@ -49,47 +52,117 @@ import java.util.stream.Collectors;
 public class ScriptService implements Closeable, ClusterStateApplier, ScriptCompiler {
 
     private static final Logger logger = LogManager.getLogger(ScriptService.class);
+    private static final DeprecationLogger deprecationLogger = DeprecationLogger.getLogger(ScriptService.class);
 
     static final String DISABLE_DYNAMIC_SCRIPTING_SETTING = "script.disable_dynamic";
 
-    public static final Setting<Integer> SCRIPT_MAX_SIZE_IN_BYTES =
-        Setting.intSetting("script.max_size_in_bytes", 65535, 0, Property.Dynamic, Property.NodeScope);
+    // Special setting value for SCRIPT_GENERAL_MAX_COMPILATIONS_RATE to indicate the script service should use context
+    // specific caches
+    static final ScriptCache.CompilationRate USE_CONTEXT_RATE_VALUE = new ScriptCache.CompilationRate(-1, TimeValue.MINUS_ONE);
+    static final String USE_CONTEXT_RATE_KEY = "use-context";
+
+    public static final Setting<Integer> SCRIPT_GENERAL_CACHE_SIZE_SETTING = Setting.intSetting(
+        "script.cache.max_size",
+        3000,
+        0,
+        Property.Dynamic,
+        Property.NodeScope
+    );
+    public static final Setting<TimeValue> SCRIPT_GENERAL_CACHE_EXPIRE_SETTING = Setting.positiveTimeSetting(
+        "script.cache.expire",
+        TimeValue.timeValueMillis(0),
+        Property.Dynamic,
+        Property.NodeScope
+    );
+    public static final Setting<Integer> SCRIPT_MAX_SIZE_IN_BYTES = Setting.intSetting(
+        "script.max_size_in_bytes",
+        65535,
+        0,
+        Property.Dynamic,
+        Property.NodeScope
+    );
+    public static final Setting<ScriptCache.CompilationRate> SCRIPT_GENERAL_MAX_COMPILATIONS_RATE_SETTING = new Setting<>(
+        "script.max_compilations_rate",
+        "150/5m",
+        (String value) -> value.equals(USE_CONTEXT_RATE_KEY) ? USE_CONTEXT_RATE_VALUE : new ScriptCache.CompilationRate(value),
+        Property.Dynamic,
+        Property.NodeScope
+    );
+
+    public static final String USE_CONTEXT_RATE_KEY_DEPRECATION_MESSAGE = "["
+        + USE_CONTEXT_RATE_KEY
+        + "] is deprecated for the setting ["
+        + SCRIPT_GENERAL_MAX_COMPILATIONS_RATE_SETTING.getKey()
+        + "] as system scripts are now exempt from the rate limit. "
+        + "Set to a value such as [150/5m] (a rate of 150 compilations per five minutes) to rate limit user scripts in case the "
+        + "script cache ["
+        + SCRIPT_GENERAL_CACHE_SIZE_SETTING.getKey()
+        + "] is undersized causing script compilation thrashing.";
 
     // Per-context settings
     static final String CONTEXT_PREFIX = "script.context.";
 
     // script.context.<context-name>.{cache_max_size, cache_expire, max_compilations_rate}
 
-    public static final Setting.AffixSetting<Integer> SCRIPT_CACHE_SIZE_SETTING =
-        Setting.affixKeySetting(CONTEXT_PREFIX,
-            "cache_max_size", key -> Setting.intSetting(key, 0, Property.NodeScope, Property.Dynamic));
+    public static final Setting.AffixSetting<Integer> SCRIPT_CACHE_SIZE_SETTING = Setting.affixKeySetting(
+        CONTEXT_PREFIX,
+        "cache_max_size",
+        key -> Setting.intSetting(key, SCRIPT_GENERAL_CACHE_SIZE_SETTING, 0, Property.NodeScope, Property.Dynamic, Property.Deprecated)
+    );
 
-    public static final Setting.AffixSetting<TimeValue> SCRIPT_CACHE_EXPIRE_SETTING =
-        Setting.affixKeySetting(CONTEXT_PREFIX,
-            "cache_expire", key -> Setting.positiveTimeSetting(key, TimeValue.timeValueMillis(0), Property.NodeScope, Property.Dynamic));
+    public static final Setting.AffixSetting<TimeValue> SCRIPT_CACHE_EXPIRE_SETTING = Setting.affixKeySetting(
+        CONTEXT_PREFIX,
+        "cache_expire",
+        key -> Setting.positiveTimeSetting(
+            key,
+            SCRIPT_GENERAL_CACHE_EXPIRE_SETTING,
+            TimeValue.timeValueMillis(0),
+            Property.NodeScope,
+            Property.Dynamic,
+            Property.Deprecated
+        )
+    );
 
     // Unlimited compilation rate for context-specific script caches
     static final String UNLIMITED_COMPILATION_RATE_KEY = "unlimited";
 
-    public static final Setting.AffixSetting<ScriptCache.CompilationRate> SCRIPT_MAX_COMPILATIONS_RATE_SETTING =
-        Setting.affixKeySetting(CONTEXT_PREFIX,
-            "max_compilations_rate",
-            key -> new Setting<ScriptCache.CompilationRate>(key, "75/5m",
-                (String value) -> value.equals(UNLIMITED_COMPILATION_RATE_KEY) ? ScriptCache.UNLIMITED_COMPILATION_RATE:
-                    new ScriptCache.CompilationRate(value),
-                Property.NodeScope, Property.Dynamic));
+    public static final Setting.AffixSetting<ScriptCache.CompilationRate> SCRIPT_MAX_COMPILATIONS_RATE_SETTING = Setting.affixKeySetting(
+        CONTEXT_PREFIX,
+        "max_compilations_rate",
+        key -> new Setting<ScriptCache.CompilationRate>(
+            key,
+            "75/5m",
+            (String value) -> value.equals(UNLIMITED_COMPILATION_RATE_KEY)
+                ? ScriptCache.UNLIMITED_COMPILATION_RATE
+                : new ScriptCache.CompilationRate(value),
+            Property.NodeScope,
+            Property.Dynamic,
+            Property.Deprecated
+        )
+    );
 
     private static final ScriptCache.CompilationRate SCRIPT_COMPILATION_RATE_ZERO = new ScriptCache.CompilationRate(0, TimeValue.ZERO);
 
-    public static final Setting<Boolean> SCRIPT_DISABLE_MAX_COMPILATIONS_RATE_SETTING =
-        Setting.boolSetting("script.disable_max_compilations_rate", false, Property.NodeScope);
+    public static final Setting<Boolean> SCRIPT_DISABLE_MAX_COMPILATIONS_RATE_SETTING = Setting.boolSetting(
+        "script.disable_max_compilations_rate",
+        false,
+        Property.NodeScope
+    );
 
     public static final String ALLOW_NONE = "none";
 
-    public static final Setting<List<String>> TYPES_ALLOWED_SETTING =
-        Setting.listSetting("script.allowed_types", Collections.emptyList(), Function.identity(), Setting.Property.NodeScope);
-    public static final Setting<List<String>> CONTEXTS_ALLOWED_SETTING =
-        Setting.listSetting("script.allowed_contexts", Collections.emptyList(), Function.identity(), Setting.Property.NodeScope);
+    public static final Setting<List<String>> TYPES_ALLOWED_SETTING = Setting.listSetting(
+        "script.allowed_types",
+        Collections.emptyList(),
+        Function.identity(),
+        Setting.Property.NodeScope
+    );
+    public static final Setting<List<String>> CONTEXTS_ALLOWED_SETTING = Setting.listSetting(
+        "script.allowed_contexts",
+        Collections.emptyList(),
+        Function.identity(),
+        Setting.Property.NodeScope
+    );
 
     private final Set<String> typesAllowed;
     private final Set<String> contextsAllowed;
@@ -109,9 +182,12 @@ public class ScriptService implements Closeable, ClusterStateApplier, ScriptComp
         this.contexts = Collections.unmodifiableMap(Objects.requireNonNull(contexts));
 
         if (Strings.hasLength(settings.get(DISABLE_DYNAMIC_SCRIPTING_SETTING))) {
-            throw new IllegalArgumentException(DISABLE_DYNAMIC_SCRIPTING_SETTING + " is not a supported setting, replace with " +
-                    "fine-grained script settings. \n Dynamic scripts can be enabled for all languages and all operations not " +
-                    "using `script.disable_dynamic: false` in elasticsearch.yml");
+            throw new IllegalArgumentException(
+                DISABLE_DYNAMIC_SCRIPTING_SETTING
+                    + " is not a supported setting, replace with "
+                    + "fine-grained script settings. \n Dynamic scripts can be enabled for all languages and all operations not "
+                    + "using `script.disable_dynamic: false` in elasticsearch.yml"
+            );
         }
 
         this.typesAllowed = TYPES_ALLOWED_SETTING.exists(settings) ? new HashSet<>() : null;
@@ -121,14 +197,21 @@ public class ScriptService implements Closeable, ClusterStateApplier, ScriptComp
 
             if (typesAllowedList.isEmpty()) {
                 throw new IllegalArgumentException(
-                    "must specify at least one script type or none for setting [" + TYPES_ALLOWED_SETTING.getKey() + "].");
+                    "must specify at least one script type or none for setting [" + TYPES_ALLOWED_SETTING.getKey() + "]."
+                );
             }
 
             for (String settingType : typesAllowedList) {
                 if (ALLOW_NONE.equals(settingType)) {
                     if (typesAllowedList.size() != 1) {
-                        throw new IllegalArgumentException("cannot specify both [" + ALLOW_NONE + "]" +
-                            " and other script types for setting [" + TYPES_ALLOWED_SETTING.getKey() + "].");
+                        throw new IllegalArgumentException(
+                            "cannot specify both ["
+                                + ALLOW_NONE
+                                + "]"
+                                + " and other script types for setting ["
+                                + TYPES_ALLOWED_SETTING.getKey()
+                                + "]."
+                        );
                     } else {
                         break;
                     }
@@ -147,7 +230,8 @@ public class ScriptService implements Closeable, ClusterStateApplier, ScriptComp
 
                 if (found == false) {
                     throw new IllegalArgumentException(
-                        "unknown script type [" + settingType + "] found in setting [" + TYPES_ALLOWED_SETTING.getKey() + "].");
+                        "unknown script type [" + settingType + "] found in setting [" + TYPES_ALLOWED_SETTING.getKey() + "]."
+                    );
                 }
             }
         }
@@ -159,14 +243,21 @@ public class ScriptService implements Closeable, ClusterStateApplier, ScriptComp
 
             if (contextsAllowedList.isEmpty()) {
                 throw new IllegalArgumentException(
-                    "must specify at least one script context or none for setting [" + CONTEXTS_ALLOWED_SETTING.getKey() + "].");
+                    "must specify at least one script context or none for setting [" + CONTEXTS_ALLOWED_SETTING.getKey() + "]."
+                );
             }
 
             for (String settingContext : contextsAllowedList) {
                 if (ALLOW_NONE.equals(settingContext)) {
                     if (contextsAllowedList.size() != 1) {
-                        throw new IllegalArgumentException("cannot specify both [" + ALLOW_NONE + "]" +
-                            " and other script contexts for setting [" + CONTEXTS_ALLOWED_SETTING.getKey() + "].");
+                        throw new IllegalArgumentException(
+                            "cannot specify both ["
+                                + ALLOW_NONE
+                                + "]"
+                                + " and other script contexts for setting ["
+                                + CONTEXTS_ALLOWED_SETTING.getKey()
+                                + "]."
+                        );
                     } else {
                         break;
                     }
@@ -176,7 +267,8 @@ public class ScriptService implements Closeable, ClusterStateApplier, ScriptComp
                     this.contextsAllowed.add(settingContext);
                 } else {
                     throw new IllegalArgumentException(
-                        "unknown script context [" + settingContext + "] found in setting [" + CONTEXTS_ALLOWED_SETTING.getKey() + "].");
+                        "unknown script context [" + settingContext + "] found in setting [" + CONTEXTS_ALLOWED_SETTING.getKey() + "]."
+                    );
                 }
             }
         }
@@ -185,7 +277,11 @@ public class ScriptService implements Closeable, ClusterStateApplier, ScriptComp
 
         // Validation requires knowing which contexts exist.
         this.validateCacheSettings(settings);
-        this.cacheHolder.set(contextCacheHolder(settings));
+        this.setCacheHolder(settings);
+    }
+
+    public static boolean isUseContextCacheSet(Settings settings) {
+        return SCRIPT_GENERAL_MAX_COMPILATIONS_RATE_SETTING.get(settings).equals(USE_CONTEXT_RATE_VALUE);
     }
 
     /**
@@ -199,15 +295,34 @@ public class ScriptService implements Closeable, ClusterStateApplier, ScriptComp
         clusterSettings.addSettingsUpdateConsumer(SCRIPT_MAX_SIZE_IN_BYTES, this::setMaxSizeInBytes);
 
         // Handle all updatable per-context settings at once for each context.
-        for (ScriptContext<?> context: contexts.values()) {
+        for (ScriptContext<?> context : contexts.values()) {
             clusterSettings.addSettingsUpdateConsumer(
                 (settings) -> cacheHolder.get().set(context.name, contextCache(settings, context)),
-                List.of(SCRIPT_CACHE_SIZE_SETTING.getConcreteSettingForNamespace(context.name),
-                        SCRIPT_CACHE_EXPIRE_SETTING.getConcreteSettingForNamespace(context.name),
-                        SCRIPT_MAX_COMPILATIONS_RATE_SETTING.getConcreteSettingForNamespace(context.name)
+                Arrays.asList(
+                    SCRIPT_CACHE_SIZE_SETTING.getConcreteSettingForNamespace(context.name),
+                    SCRIPT_CACHE_EXPIRE_SETTING.getConcreteSettingForNamespace(context.name),
+                    SCRIPT_MAX_COMPILATIONS_RATE_SETTING.getConcreteSettingForNamespace(context.name),
+                    SCRIPT_GENERAL_CACHE_EXPIRE_SETTING,
+                    // general settings used for fallbacks
+                    SCRIPT_GENERAL_CACHE_SIZE_SETTING
                 )
             );
         }
+
+        // Handle all settings for context and general caches, this flips between general and context caches.
+        clusterSettings.addSettingsUpdateConsumer(
+            this::setCacheHolder,
+            Arrays.asList(
+                SCRIPT_GENERAL_MAX_COMPILATIONS_RATE_SETTING,
+                SCRIPT_GENERAL_CACHE_EXPIRE_SETTING,
+                SCRIPT_GENERAL_CACHE_SIZE_SETTING,
+                SCRIPT_MAX_COMPILATIONS_RATE_SETTING,
+                SCRIPT_DISABLE_MAX_COMPILATIONS_RATE_SETTING,
+                SCRIPT_CACHE_EXPIRE_SETTING,
+                SCRIPT_CACHE_SIZE_SETTING
+            ),
+            this::validateCacheSettings
+        );
     }
 
     /**
@@ -215,12 +330,19 @@ public class ScriptService implements Closeable, ClusterStateApplier, ScriptComp
      * when using the general cache.
      */
     void validateCacheSettings(Settings settings) {
-        List<Setting.AffixSetting<?>> affixes = List.of(SCRIPT_MAX_COMPILATIONS_RATE_SETTING, SCRIPT_CACHE_EXPIRE_SETTING,
-                                                        SCRIPT_CACHE_SIZE_SETTING);
+        boolean useContext = SCRIPT_GENERAL_MAX_COMPILATIONS_RATE_SETTING.get(settings).equals(USE_CONTEXT_RATE_VALUE);
+        if (useContext) {
+            deprecationLogger.warn(DeprecationCategory.SCRIPTING, "scripting-context-cache", USE_CONTEXT_RATE_KEY_DEPRECATION_MESSAGE);
+        }
+        List<Setting.AffixSetting<?>> affixes = Arrays.asList(
+            SCRIPT_MAX_COMPILATIONS_RATE_SETTING,
+            SCRIPT_CACHE_EXPIRE_SETTING,
+            SCRIPT_CACHE_SIZE_SETTING
+        );
         List<String> customRates = new ArrayList<>();
         List<String> keys = new ArrayList<>();
-        for (Setting.AffixSetting<?> affix: affixes) {
-            for (String context: affix.getAsMap(settings).keySet()) {
+        for (Setting.AffixSetting<?> affix : affixes) {
+            for (String context : affix.getAsMap(settings).keySet()) {
                 String s = affix.getConcreteSettingForNamespace(context).getKey();
                 if (contexts.containsKey(context) == false) {
                     throw new IllegalArgumentException("Context [" + context + "] doesn't exist for setting [" + s + "]");
@@ -231,12 +353,39 @@ public class ScriptService implements Closeable, ClusterStateApplier, ScriptComp
                 }
             }
         }
+        if (useContext == false && keys.isEmpty() == false) {
+            keys.sort(Comparator.naturalOrder());
+            throw new IllegalArgumentException(
+                "Context cache settings ["
+                    + String.join(", ", keys)
+                    + "] requires ["
+                    + SCRIPT_GENERAL_MAX_COMPILATIONS_RATE_SETTING.getKey()
+                    + "] to be ["
+                    + USE_CONTEXT_RATE_KEY
+                    + "]"
+            );
+        }
         if (SCRIPT_DISABLE_MAX_COMPILATIONS_RATE_SETTING.get(settings)) {
             if (customRates.size() > 0) {
                 customRates.sort(Comparator.naturalOrder());
-                throw new IllegalArgumentException("Cannot set custom context compilation rates [" +
-                    String.join(", ", customRates) + "] if compile rates disabled via [" +
-                    SCRIPT_DISABLE_MAX_COMPILATIONS_RATE_SETTING.getKey() + "]");
+                throw new IllegalArgumentException(
+                    "Cannot set custom context compilation rates ["
+                        + String.join(", ", customRates)
+                        + "] if compile rates disabled via ["
+                        + SCRIPT_DISABLE_MAX_COMPILATIONS_RATE_SETTING.getKey()
+                        + "]"
+                );
+            }
+            if (useContext == false && SCRIPT_GENERAL_MAX_COMPILATIONS_RATE_SETTING.exists(settings)) {
+                throw new IllegalArgumentException(
+                    "Cannot set custom general compilation rates ["
+                        + SCRIPT_GENERAL_MAX_COMPILATIONS_RATE_SETTING.getKey()
+                        + "] to ["
+                        + SCRIPT_GENERAL_MAX_COMPILATIONS_RATE_SETTING.get(settings)
+                        + "] if compile rates disabled via ["
+                        + SCRIPT_DISABLE_MAX_COMPILATIONS_RATE_SETTING.getKey()
+                        + "]"
+                );
             }
         }
     }
@@ -268,9 +417,17 @@ public class ScriptService implements Closeable, ClusterStateApplier, ScriptComp
     void setMaxSizeInBytes(int newMaxSizeInBytes) {
         for (Map.Entry<String, StoredScriptSource> source : getScriptsFromClusterState().entrySet()) {
             if (source.getValue().getSource().getBytes(StandardCharsets.UTF_8).length > newMaxSizeInBytes) {
-                throw new IllegalArgumentException("script.max_size_in_bytes cannot be set to [" + newMaxSizeInBytes + "], " +
-                        "stored script [" + source.getKey() + "] exceeds the new value with a size of " +
-                        "[" + source.getValue().getSource().getBytes(StandardCharsets.UTF_8).length + "]");
+                throw new IllegalArgumentException(
+                    "script.max_size_in_bytes cannot be set to ["
+                        + newMaxSizeInBytes
+                        + "], "
+                        + "stored script ["
+                        + source.getKey()
+                        + "] exceeds the new value with a size of "
+                        + "["
+                        + source.getValue().getSource().getBytes(StandardCharsets.UTF_8).length
+                        + "]"
+                );
             }
         }
 
@@ -321,8 +478,16 @@ public class ScriptService implements Closeable, ClusterStateApplier, ScriptComp
 
         if (type == ScriptType.INLINE) {
             if (idOrCode.getBytes(StandardCharsets.UTF_8).length > maxSizeInBytes) {
-                throw new IllegalArgumentException("exceeded max allowed inline script size in bytes [" + maxSizeInBytes + "] " +
-                    "with size [" + idOrCode.getBytes(StandardCharsets.UTF_8).length + "] for script [" + idOrCode + "]");
+                throw new IllegalArgumentException(
+                    "exceeded max allowed inline script size in bytes ["
+                        + maxSizeInBytes
+                        + "] "
+                        + "with size ["
+                        + idOrCode.getBytes(StandardCharsets.UTF_8).length
+                        + "] for script ["
+                        + idOrCode
+                        + "]"
+                );
             }
         }
 
@@ -382,11 +547,21 @@ public class ScriptService implements Closeable, ClusterStateApplier, ScriptComp
         return source;
     }
 
-    public void putStoredScript(ClusterService clusterService, PutStoredScriptRequest request,
-                                ActionListener<AcknowledgedResponse> listener) {
+    public void putStoredScript(
+        ClusterService clusterService,
+        PutStoredScriptRequest request,
+        ActionListener<AcknowledgedResponse> listener
+    ) {
         if (request.content().length() > maxSizeInBytes) {
-            throw new IllegalArgumentException("exceeded max allowed stored script size in bytes [" + maxSizeInBytes + "] with size [" +
-                request.content().length() + "] for script [" + request.id() + "]");
+            throw new IllegalArgumentException(
+                "exceeded max allowed stored script size in bytes ["
+                    + maxSizeInBytes
+                    + "] with size ["
+                    + request.content().length()
+                    + "] for script ["
+                    + request.id()
+                    + "]"
+            );
         }
 
         StoredScriptSource source = request.source();
@@ -400,10 +575,10 @@ public class ScriptService implements Closeable, ClusterStateApplier, ScriptComp
 
             if (isTypeEnabled(ScriptType.STORED) == false) {
                 throw new IllegalArgumentException(
-                    "cannot put [" + ScriptType.STORED + "] script, [" + ScriptType.STORED + "] scripts are not enabled");
+                    "cannot put [" + ScriptType.STORED + "] script, [" + ScriptType.STORED + "] scripts are not enabled"
+                );
             } else if (isAnyContextEnabled() == false) {
-                throw new IllegalArgumentException(
-                    "cannot put [" + ScriptType.STORED + "] script, no script contexts are enabled");
+                throw new IllegalArgumentException("cannot put [" + ScriptType.STORED + "] script, no script contexts are enabled");
             } else if (request.context() != null) {
                 ScriptContext<?> context = contexts.get(request.context());
                 if (context == null) {
@@ -432,19 +607,21 @@ public class ScriptService implements Closeable, ClusterStateApplier, ScriptComp
         });
     }
 
-    public void deleteStoredScript(ClusterService clusterService, DeleteStoredScriptRequest request,
-                                   ActionListener<AcknowledgedResponse> listener) {
-        clusterService.submitStateUpdateTask("delete-script-" + request.id(),
-            new AckedClusterStateUpdateTask(request, listener) {
-                @Override
-                public ClusterState execute(ClusterState currentState) {
-                    ScriptMetadata smd = currentState.metadata().custom(ScriptMetadata.TYPE);
-                    smd = ScriptMetadata.deleteStoredScript(smd, request.id());
-                    Metadata.Builder mdb = Metadata.builder(currentState.getMetadata()).putCustom(ScriptMetadata.TYPE, smd);
+    public void deleteStoredScript(
+        ClusterService clusterService,
+        DeleteStoredScriptRequest request,
+        ActionListener<AcknowledgedResponse> listener
+    ) {
+        clusterService.submitStateUpdateTask("delete-script-" + request.id(), new AckedClusterStateUpdateTask(request, listener) {
+            @Override
+            public ClusterState execute(ClusterState currentState) {
+                ScriptMetadata smd = currentState.metadata().custom(ScriptMetadata.TYPE);
+                smd = ScriptMetadata.deleteStoredScript(smd, request.id());
+                Metadata.Builder mdb = Metadata.builder(currentState.getMetadata()).putCustom(ScriptMetadata.TYPE, smd);
 
-                    return ClusterState.builder(currentState).metadata(mdb).build();
-                }
-            });
+                return ClusterState.builder(currentState).metadata(mdb).build();
+            }
+        });
     }
 
     public StoredScriptSource getStoredScript(ClusterState state, GetStoredScriptRequest request) {
@@ -469,13 +646,13 @@ public class ScriptService implements Closeable, ClusterStateApplier, ScriptComp
         Set<String> types = typesAllowed;
         if (types == null) {
             types = new HashSet<>();
-            for (ScriptType type: ScriptType.values()) {
+            for (ScriptType type : ScriptType.values()) {
                 types.add(type.getName());
             }
         }
 
         final Set<String> contexts = contextsAllowed != null ? contextsAllowed : this.contexts.keySet();
-        Map<String,Set<String>> languageContexts = new HashMap<>();
+        Map<String, Set<String>> languageContexts = new HashMap<>();
         engines.forEach(
             (key, value) -> languageContexts.put(
                 key,
@@ -489,9 +666,56 @@ public class ScriptService implements Closeable, ClusterStateApplier, ScriptComp
         return cacheHolder.get().stats();
     }
 
+    public ScriptCacheStats cacheStats() {
+        return cacheHolder.get().cacheStats();
+    }
+
     @Override
     public void applyClusterState(ClusterChangedEvent event) {
         clusterState = event.state();
+    }
+
+    void setCacheHolder(Settings settings) {
+        CacheHolder current = cacheHolder.get();
+        boolean useContext = SCRIPT_GENERAL_MAX_COMPILATIONS_RATE_SETTING.get(settings).equals(USE_CONTEXT_RATE_VALUE);
+
+        if (current == null) {
+            if (useContext) {
+                cacheHolder.set(contextCacheHolder(settings));
+            } else {
+                cacheHolder.set(generalCacheHolder(settings));
+            }
+            return;
+        }
+
+        // Update
+        if (useContext) {
+            if (current.general != null) {
+                // Flipping to context specific
+                cacheHolder.set(contextCacheHolder(settings));
+            }
+        } else if (current.general == null) {
+            // Flipping to general
+            cacheHolder.set(generalCacheHolder(settings));
+        } else if (current.general.rate.equals(SCRIPT_GENERAL_MAX_COMPILATIONS_RATE_SETTING.get(settings)) == false
+            || current.general.cacheExpire.equals(SCRIPT_GENERAL_CACHE_EXPIRE_SETTING.get(settings)) == false
+            || current.general.cacheSize != SCRIPT_GENERAL_CACHE_SIZE_SETTING.get(settings)) {
+                // General compilation rate, cache expiration or cache size changed
+                cacheHolder.set(generalCacheHolder(settings));
+            }
+    }
+
+    CacheHolder generalCacheHolder(Settings settings) {
+        ScriptCache.CompilationRate rate = SCRIPT_GENERAL_MAX_COMPILATIONS_RATE_SETTING.get(settings);
+        if (SCRIPT_DISABLE_MAX_COMPILATIONS_RATE_SETTING.get(settings) || compilationLimitsEnabled() == false) {
+            rate = SCRIPT_COMPILATION_RATE_ZERO;
+        }
+        return new CacheHolder(
+            SCRIPT_GENERAL_CACHE_SIZE_SETTING.get(settings),
+            SCRIPT_GENERAL_CACHE_EXPIRE_SETTING.get(settings),
+            rate,
+            SCRIPT_GENERAL_MAX_COMPILATIONS_RATE_SETTING.getKey()
+        );
     }
 
     CacheHolder contextCacheHolder(Settings settings) {
@@ -505,18 +729,22 @@ public class ScriptService implements Closeable, ClusterStateApplier, ScriptComp
         int cacheSize = cacheSizeSetting.existsOrFallbackExists(settings) ? cacheSizeSetting.get(settings) : context.cacheSizeDefault;
 
         Setting<TimeValue> cacheExpireSetting = SCRIPT_CACHE_EXPIRE_SETTING.getConcreteSettingForNamespace(context.name);
-        TimeValue cacheExpire = cacheExpireSetting.existsOrFallbackExists(settings) ?
-            cacheExpireSetting.get(settings) : context.cacheExpireDefault;
+        TimeValue cacheExpire = cacheExpireSetting.existsOrFallbackExists(settings)
+            ? cacheExpireSetting.get(settings)
+            : context.cacheExpireDefault;
 
-        Setting<ScriptCache.CompilationRate> rateSetting =
-            SCRIPT_MAX_COMPILATIONS_RATE_SETTING.getConcreteSettingForNamespace(context.name);
-        ScriptCache.CompilationRate rate = null;
-        if (SCRIPT_DISABLE_MAX_COMPILATIONS_RATE_SETTING.get(settings) || compilationLimitsEnabled() == false) {
+        Setting<ScriptCache.CompilationRate> rateSetting = SCRIPT_MAX_COMPILATIONS_RATE_SETTING.getConcreteSettingForNamespace(
+            context.name
+        );
+        ScriptCache.CompilationRate rate;
+        if (SCRIPT_DISABLE_MAX_COMPILATIONS_RATE_SETTING.get(settings)
+            || compilationLimitsEnabled() == false
+            || context.compilationRateLimited == false) {
             rate = SCRIPT_COMPILATION_RATE_ZERO;
         } else if (rateSetting.existsOrFallbackExists(settings)) {
             rate = rateSetting.get(settings);
         } else {
-            rate = new ScriptCache.CompilationRate(context.maxCompilationRateDefault);
+            rate = new ScriptCache.CompilationRate(ScriptContext.DEFAULT_COMPILATION_RATE_LIMIT);
         }
 
         return new ScriptCache(cacheSize, cacheExpire, rate, rateSetting.getKey());
@@ -528,12 +756,19 @@ public class ScriptService implements Closeable, ClusterStateApplier, ScriptComp
      * 2) context mode, if the context script cache is configured.  There is no general cache in this case.
      */
     static class CacheHolder {
+        final ScriptCache general;
         final Map<String, AtomicReference<ScriptCache>> contextCache;
+
+        CacheHolder(int cacheMaxSize, TimeValue cacheExpire, ScriptCache.CompilationRate maxCompilationRate, String contextRateSetting) {
+            contextCache = null;
+            general = new ScriptCache(cacheMaxSize, cacheExpire, maxCompilationRate, contextRateSetting);
+        }
 
         CacheHolder(Map<String, ScriptCache> context) {
             Map<String, AtomicReference<ScriptCache>> refs = new HashMap<>(context.size());
             context.forEach((k, v) -> refs.put(k, new AtomicReference<>(v)));
             contextCache = Collections.unmodifiableMap(refs);
+            general = null;
         }
 
         /**
@@ -541,6 +776,9 @@ public class ScriptService implements Closeable, ClusterStateApplier, ScriptComp
          * the given context. Returns null in context mode if the requested context does not exist.
          */
         ScriptCache get(String context) {
+            if (general != null) {
+                return general;
+            }
             AtomicReference<ScriptCache> ref = contextCache.get(context);
             if (ref == null) {
                 return null;
@@ -549,17 +787,35 @@ public class ScriptService implements Closeable, ClusterStateApplier, ScriptComp
         }
 
         ScriptStats stats() {
-            List<ScriptContextStats> stats = new ArrayList<>(contextCache.size());
-            for (Map.Entry<String, AtomicReference<ScriptCache>> entry : contextCache.entrySet()) {
-                stats.add(entry.getValue().get().stats(entry.getKey()));
+            if (general != null) {
+                return general.stats();
             }
-            return new ScriptStats(stats);
+            List<ScriptContextStats> contextStats = new ArrayList<>(contextCache.size());
+            for (Map.Entry<String, AtomicReference<ScriptCache>> entry : contextCache.entrySet()) {
+                ScriptCache cache = entry.getValue().get();
+                contextStats.add(cache.stats(entry.getKey()));
+            }
+            return new ScriptStats(contextStats);
+        }
+
+        ScriptCacheStats cacheStats() {
+            if (general != null) {
+                return new ScriptCacheStats(general.stats());
+            }
+            Map<String, ScriptStats> context = new HashMap<>(contextCache.size());
+            for (String name : contextCache.keySet()) {
+                context.put(name, contextCache.get(name).get().stats());
+            }
+            return new ScriptCacheStats(context);
         }
 
         /**
          * Update a single context cache if we're in the context cache mode otherwise no-op.
          */
         void set(String name, ScriptCache cache) {
+            if (general != null) {
+                return;
+            }
             AtomicReference<ScriptCache> ref = contextCache.get(name);
             assert ref != null : "expected script cache to exist for context [" + name + "]";
             ScriptCache oldCache = ref.get();
